# Video-QC-v3

./: CMakeLists.txt  README.md  build.bat  technical_guide.md  v2.0.txt  v2.1.txt
src/: app.rc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/core/: Constants.h  media_info.h  types.h
src/qctools/: QCToolsController.cpp  QCToolsController.h  QCToolsManager - Copy.cpp  QCToolsManager.cpp  QCToolsManager.h
src/ui/: ConfigWidget.cpp  ConfigWidget.h  ResultsWidget.cpp  ResultsWidget.h  SettingsDialog.cpp  SettingsDialog.h  clickableheaderview.cpp  clickableheaderview.h  logdialog.cpp  logdialog.h  stylesheet.qss  videowidget.cpp  videowidget.h
